Fixed overflow y responsive form

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@media screen and (max-width:1279px)
+{
+  
+  .App{
+    overflow-y: scroll;
+  }
+    
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
